--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "vite": "^3.0.4"
   },
   "dependencies": {
-    "million": "^2.6.4"
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^5.17.19",
+    "framer-motion": "^10.18.0",
+    "million": "^2.6.4",
+    "react-router-dom": "^6.21.3"
   }
 }
